// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family G — Windows specifics > G1 — pi.cmd resolved + toArgv prepends node.exe (no-cmd-flash) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family G — Windows specifics > G2 — npm-g at %APPDATA%\\Roaming\\npm (argv prepends node.exe) 1`] = `
"name:   pi
ok:     true
source: npm-global
path:   <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family G — Windows specifics > G4 — node.exe at C:\\Program Files\\nodejs\\node.exe 1`] = `
"name:   node
ok:     true
source: system
path:   C:/Program Files/nodejs/node.exe
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node/node.exe
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/node.cmd
  where        ok
argv:
  - C:/Program Files/nodejs/node.exe"
`;
